# mc-docker-restart

client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/db/: task.rs
shared/: Cargo.toml
shared/src/: lib.rs
