[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt", "net", "io-util", "process", "time", "macros", "sync"] }
shared = { path = "../shared" }
env_logger = "0.10.0"
chrono = { version = "0.4.26", default_features = false, features = ["clock"] }
log = "0.4.19"
